# collaborative-robotic-sanding

./: .clang-format  .travis.yml  README.md  ROS1_BRIDGE_BUILD_INSTRUCTIONS.md  changes.diff  crs.rosinstall  crs_hardware.rosinstall  skip.mixin
crs_application/: CMakeLists.txt  README.md  package.xml
crs_application/config/: crs.yaml  localization.yaml  moveit_controllers.yaml  moveit_planning_config.yaml  part_localization.yaml
crs_application/config/main/: crs.yaml  part_localization.yaml
crs_application/config/main/motion_planning/: MP_config.yaml
crs_application/config/main/rework/: region_crop.yaml  region_detection.yaml
crs_application/config/main/toolpath_crop/: region_detection_pcl2d.yaml
crs_application/config/motion_planning/: MP_config.yaml
crs_application/config/swri/: part_localization.yaml
crs_application/config/swri/motion_planning/: MP_config.yaml
crs_application/config/swri/rework/: region_crop.yaml  region_detection.yaml
crs_application/config/swri/toolpath_crop/: region_crop.yaml  region_detection_opencv_default.yaml  region_detection_pcl.yaml
crs_application/config/toolpath_crop/: region_detection_opencv_split_imgs.yaml  region_detection_pcl.yaml
crs_application/include/crs_application/: crs_executive.h
crs_application/include/crs_application/common/: common.h  config.h  datatypes.h  simulation_object_spawner.h
crs_application/include/crs_application/task_managers/: motion_planning_manager.h  part_registration_manager.h  part_rework_manager.h  process_execution_manager.h  scan_acquisition_manager.h
crs_application/launch/: crs.launch.py  crs.launch.xml  load_preview_robot_model.launch.xml  load_robot_model.launch.xml  main.launch.py  perception.launch.py  registration_startup.launch.py  rework_startup.launch.py
crs_application/resources/: crs.rviz  crs_process.scxml
crs_application/src/: crs_application.cpp  crs_executive.cpp  test_yaml_parsing.cpp
crs_application/src/common/: config.cpp  simulation_object_spawner.cpp
crs_application/src/task_managers/: motion_planning_manager.cpp  part_registration_manager.cpp  part_rework_manager.cpp  process_execution_manager.cpp  scan_acquisition_manager.cpp
crs_area_selection/: CMakeLists.txt  package.xml
crs_area_selection/include/crs_area_selection/: area_selector.h  area_selector_parameters.h  filter.h  filter_impl.h  selection_artist.h  types.h
crs_area_selection/src/: area_selection_node.cpp  area_selector.cpp  selection_artist.cpp
crs_gazebo_plugins/: CMakeLists.txt  package.xml
crs_gazebo_plugins/include/crs_gazebo_plugins/: joint_pose_trajectory.hpp
crs_gazebo_plugins/src/: joint_pose_trajectory.cpp
crs_gui/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
crs_gui/config/: crs_application_demo.rviz
crs_gui/include/crs_gui/: application_panel.h  register_ros_msgs_for_qt.h
crs_gui/include/crs_gui/widgets/: crs_application_widget.h  part_selection_widget.h  polygon_area_selection_widget.h  state_machine_interface_widget.h
crs_gui/launch/: area_selection_demo.launch.xml  crs_application_demo.launch.xml  state_machine_interface_demo.launch.xml
crs_gui/src/: application_panel.cpp
crs_gui/src/nodes/: area_selection_widget_demo.cpp  crs_application_demo.cpp  part_selection_widget_demo.cpp  state_machine_interface_widget_demo.cpp
crs_gui/src/widgets/: crs_application_widget.cpp  part_selection_widget.cpp  polygon_area_selection_widget.cpp  state_machine_interface_widget.cpp
crs_gui/ui/: crs_application.ui  part_selection.ui  polygon_area_selection_widget.ui  state_machine_interface.ui
crs_motion_execution/: CMakeLists.txt  package.xml
crs_motion_execution/src/: motion_execution_server.cpp
crs_motion_planning/: CMakeLists.txt  README.md  package.xml
crs_motion_planning/include/crs_motion_planning/: path_planning_utils.h  path_processing_utils.h
crs_motion_planning/src/: example_wait_service.cpp  freespace_planning_server.cpp  motion_planning_server.cpp  path_planning_utils.cpp  path_processing_utils.cpp  process_planner_test.cpp  surface_planner.cpp
crs_moveit2_config/: CMakeLists.txt  (+1 more)
crs_msgs/: CMakeLists.txt  package.xml
crs_msgs/action/: CartesianComplianceTrajectory.action
crs_msgs/msg/: ProcessConfiguration.msg  ProcessMotionPlan.msg  ProcessTrajectory.msg  ToolProcessPath.msg
crs_msgs/srv/: CallFreespaceMotion.srv  CropToolpaths.srv  ExecuteAction.srv  GetAvailableActions.srv  GetConfiguration.srv  GetROISelection.srv  LoadPart.srv  LocalizeToPart.srv  PlanProcessMotions.srv  PlanProcessPaths.srv  RobotPositioner.srv
crs_perception/: CMakeLists.txt  README.md  package.xml
crs_perception/include/crs_perception/: model_to_point_cloud.hpp
crs_perception/src/: model_to_point_cloud.cpp
crs_perception/src/nodes/: localize_to_part.cpp  test_localize_to_part.cpp  toolpath_crop_node.cpp
crs_process_data/: CMakeLists.txt  package.xml
crs_robot_comms/: CMakeLists.txt  README.md  package.xml
crs_robot_comms/src/: ur_comms.cpp  ur_comms_sim.cpp
crs_support/: CMakeLists.txt  package.xml
crs_support/launch/: combined_bridge.launch.py  environment_launch.launch.py  environment_launch_swri.launch.py  gazebo_swri_demo.launch.py  gazebo_test.launch.py  spawn_cart.launch.py  spawn_part.launch.py
crs_support/meshes/Mockup/collision/: Mockup3_6_Cart_collision.stl  empty_cart_collision.stl  mockup_cart_collision_v3.stl
crs_support/meshes/Mockup/visual/: empty_cart.stl  mockup_frame_v3.stl
crs_support/meshes/Parts/collision/: part1_ch.stl
crs_support/meshes/Parts/visual/: part_from_mockup.stl
crs_support/meshes/Swri_demo/: mold_transformed.stl
crs_support/sdf/: cart.sdf  part1.sdf
crs_support/toolpaths/scanned_part1/: job_45degrees.yaml  job_90degrees.yaml  job_long_strips.yaml
crs_support/urdf/: crs.urdf  crs.urdf.xacro  crs_v3.urdf  swri_demo.urdf  swri_demo.urdf.xacro  swri_demo2.urdf.xacro  swri_demo3.urdf.xacro  swri_demo_sander.urdf.xacro  ur10e_robot.srdf
crs_support/worlds/: crs.world
crs_utils_py/: CMakeLists.txt  package.xml  setup.cfg  setup.py
crs_utils_py/src/: joint_state_publisher.py
(+79 files in other folders)
