<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crs_application</name>
  <version>0.1.0</version>
  <description>The central application for the Collaborative Robotic Sanding project</description>
  <maintainer email="jrgichodevel@gmail.com">ros-industrial</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>scxml_core</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>crs_msgs</depend>  
  <depend>tf2_eigen</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>yaml_cpp_vendor</depend> 
  <depend>crs_motion_planning</depend>   
  <depend>gazebo_msgs</depend>
  <depend>region_detection_msgs</depend>
  
  <exec_depend>launch_xml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
