<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crs_gazebo_plugins</name>
  <version>0.1.0</version>
  <description>Plugins for gazebo</description>
  <maintainer email="jrgnichodevel@gmail.com">jnicho</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>control_msgs</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>  
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>gazebo_plugins</depend>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
